# Boxey

./: .gitignore  Cargo.toml  README.md  gen.sh  readme.md
boxey-flutter/: README.md  analysis_options.yaml  pubspec.yaml
boxey-flutter/android/app/: build.gradle
boxey-flutter/ios/Runner/: Info.plist
boxey-flutter/ios/Runner.xcodeproj/: project.pbxproj
boxey-flutter/lib/: grcp.dart  main.dart
boxey-flutter/lib/pages/: home.dart  home.freezed.dart  home.g.dart  login.dart  packages.dart  settings.dart
boxey-flutter/lib/protos/: auth.pb.dart  auth.pbgrpc.dart  auth.pbjson.dart  lockers.pb.dart  lockers.pbenum.dart  lockers.pbgrpc.dart  lockers.pbjson.dart  packages.pb.dart  packages.pbenum.dart  packages.pbgrpc.dart  packages.pbjson.dart  public_tracking.pb.dart  public_tracking.pbenum.dart  public_tracking.pbgrpc.dart  public_tracking.pbjson.dart  sending.pb.dart  sending.pbenum.dart  sending.pbgrpc.dart  sending.pbjson.dart  webtrack.pb.dart  webtrack.pbenum.dart  webtrack.pbgrpc.dart  webtrack.pbjson.dart
boxey-flutter/lib/providers/: auth.dart  auth.freezed.dart  auth.g.dart  grcp.dart  grcp.g.dart  lockers.dart  lockers.g.dart  package_sending.dart  packages.dart  (+2 more)
boxey-flutter/linux/: CMakeLists.txt  my_application.cc
boxey-flutter/web/: index.html  manifest.json
boxey-flutter/windows/: CMakeLists.txt
boxey-server/: Cargo.toml  build.rs
boxey-server/src/: db.rs  main.rs  model.rs  protos.rs  services.rs
boxey-server/src/db/: queries.rs  upgrades.rs
boxey-server/src/db/queries/: add_session.sql  check_ownership.sql  get_user_packages.sql
boxey-server/src/db/upgrades/: schema1_upgrade.sql
boxey-web/: .prettierignore  package-lock.json  package.json  readme.md
boxey-web/src/: app.html
proto/boxey/: auth.proto  lockers.proto  sending.proto  webtrack.proto
protos/: packages.proto
server-db-entity/: Cargo.toml
server-db-entity/src/: events.rs  lib.rs  package.rs  prelude.rs  session.rs  user.rs  user_package.rs  user_packages.rs
server-db-migration/: Cargo.toml
server-db-migration/src/: m20220101_000001_create_table.rs
(+31 files in other folders)
