[package]
name = "boxey-server"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
bytes = "1.3.0"
prost = "0.11.6"
sea-orm = { version = "0.10.7", features = [
    "runtime-tokio-rustls",
    "sqlx-sqlite",
] }
tokio = { version = "1.24.2", features = ["full"] }
tonic = { version = "0.8.3", features = ["gzip"] }
server-db-entity = { path = "../server-db-entity" }
server-db-migration = { path = "../server-db-migration" }
uuid = { version = "1.3.0", features = ["v4"] }

[build-dependencies]
tonic-build = "0.8.4"
