[package]
name = "boxey-server"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
bytes = "1.4.0"
prost = "0.11.9"
prost-types = "0.11.9"
sea-orm = { version = "0.11.3", features = [
    "runtime-tokio-rustls",
    "sqlx-sqlite",
] }
tokio = { version = "1.29.1", features = ["full"] }
tonic = { version = "0.9.2", features = ["gzip"] }
server-db-entity = { path = "../server-db-entity" }
server-db-migration = { path = "../server-db-migration" }
uuid = { version = "1.4.0", features = ["v4"] }

[build-dependencies]
tonic-build = "0.9.2"
